# game

./: Cargo.toml
src/: main.rs  plugins.rs  vertex.rs  vulkan.rs
src/plugins/: components.rs  save_load.rs  vulkan.rs
src/plugins/components/: components.rs
src/plugins/components/components/: body_subparts.rs
src/plugins/save_load/: systems.rs
src/plugins/vulkan/: config.rs  resources.rs  systems.rs
src/shaders/: shader.frag  shader.vert
