[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.32.1"
vulkano-win = "0.32.0"
winit = "0.27.5"
vk-shader-macros = "0.2.8"
bytemuck = "1.12.3"
bevy_ecs = "0.9.0"
rand = "0.8.5"