[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.32.1"
vulkano-win = "0.32.0"
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_vulkano = "0.9.1"
vulkano-shaders = "0.32.0"
vulkano-util = "0.32.0"
bevy_ecs = "0.9.1"
bevy_reflect = "0.9.1"
filetime = "0.2"
regex = "1.7.0"